# blog-app

./: Cargo.toml
.idx/: dev.nix
migrations/2024-11-29-163837_create_users_and_posts/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
