[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5"
diesel = { version = "2.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rocket_codegen = "0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

